# weather-widget

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: geoip.rs  images.rs  main.rs  noaa.rs
